--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "About Me"
 title_separator          : "-"
 name                     : &name "Minye Shao"
 description              : &description "Computer Science PhD student in the Hybrid Intelligence (HI) Lab at Durham University."
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://minyeshao.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "MinyeShao.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
