--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 
 # Site Settings
-locale                   : "CN"
+locale                   : "en-US"
 title                    : "About Me"
 title_separator          : "-"
 name                     : &name "Minye Shao"
