--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ locale                   : "en-US"
 title                    : "About Me"
 title_separator          : "-"
 name                     : &name "Minye Shao"
-description              : &description "Computer Science PhD student in the Hybrid Intelligence (HI) Lab at Durham University."
+description              : &description ""
 url                      : https://minyeshao.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "MinyeShao.github.io"
@@ -88,7 +88,7 @@ author:
   location         : "Newcastle upon Tyne, UK"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  # googlescholar    : "http://yourfullgooglescholarurl.com"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
