--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "About Me"
+title                    : "About Messsss"
 title_separator          : "-"
 name                     : &name "Minye Shao"
 description              : &description ""
